@@ -3,14 +3,20 @@ version 1.2.3 (cvs)
 	
 	- building against meanwhile 0.4.2
 	
-	- added support for privacy (allow all, allow list, deny all, deny
-	list, allow buddy list) from RFE #1054813
+	- rfe #1054813 privacy support (allow all, allow list, deny all,
+	deny list, allow buddy list)
 
 	- fix #1194631 Windows file transfer crashes gaim
 	
 	- fix #1178603 crash on duplicate ldap entries (add buddy)
 
 	- added "Invite to Conference..." context menu
+
+	- don't reset conversation features when remote closes
+	conversation; prevents sending of formatted messages as plaintext.
+
+	- rfe #1203358 release info... (added version/credits to plugin
+	preferences pane)
 	
 version 1.2.2 (2005-05-02)
 
